--- a/client/src/App.css
+++ b/client/src/App.css
@@ -304,7 +304,7 @@
   }
   .menu-home {
     text-transform: uppercase;
-    color: rgba(255, 255, 255, 1);
+    color: rgb(0, 0, 0);
     text-shadow: 1px 1px 1px black, 0 0 0.1em black, 0 0 0.1em black;
     cursor: pointer;
     pointer-events: none;
@@ -358,7 +358,7 @@
   }
   .menu-home {
     text-transform: uppercase;
-    color: rgba(255, 255, 255, 1);
+    color: rgb(0, 0, 0);
     text-shadow: 1px 1px 1px black, 0 0 0.1em black, 0 0 0.1em black;
     cursor: pointer;
     pointer-events: none;
@@ -414,7 +414,7 @@
   }
   .menu-home {
     text-transform: uppercase;
-    color: rgba(255, 255, 255, 1);
+    color: rgb(0, 0, 0);
     text-shadow: 1px 1px 1px black, 0 0 0.1em black, 0 0 0.1em black;
     cursor: pointer;
     pointer-events: none;
