--- a/client/src/App.css
+++ b/client/src/App.css
@@ -645,3 +645,8 @@ span {
 .content-bg{
   background-color: rgba(255,255,255, 0.65) !important;
 }
+
+.menu-text{
+  text-decoration: none;
+  color: inherit;
+}
